--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.3'
+    classpath "com.android.tools.build:gradle:$gradle_tools"
     //noinspection DifferentKotlinGradleVersion
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
